  - Fix lagarto configuration to read its settings from controller.xml
    in addition to the config.properties file (Juha Lindfors) (ORCJAVA-264)
  - X10: patch for potential race condition between thread deallocating 
    gateway and thread processing serial port input (Juha Lindfors, ORCJAVA-359)
  - Fix ISY-99 connection error messages at regular interval (ORCJAVA-372)

Controller Pro 1.0.10
=====================

New Features:

  - Add Port Abstraction Daemon (PAD) source files to project (ORCJAVA-314 + ORCJAVA-375)
  - EnOcean Implementation (Rainer Hitz) (ORCJAVA-348)
  - Rewrite TCP for EventListener interface (Marcus Redeker) (ORCJAVA-298)

Bug Fixes:

  - Fix an NPE in lagarto command caused by undetermined
    initialization order between ExecutableCommand and
    EventListener implementations (Juha Lindfors) (ORCJAVA-346)

Controller Pro 1.0.9
====================

New Features:

  - Include Web Console 2.1.0, r7746 (ORCJAVA-333)
  
Bug Fixes:

  - ISY-99 implementation does not scale to high number of
    sensors (Kevin Purney) (ORCJAVA-325)
  - Telnet status read for switch sensors appears broken. A returned
    'on' string is never correctly parsed to Java boolean value true
    due to the extra linefeed '\n' character being added to all response
    values in readString() implementation (ORCJAVA-326)
  - Telnet log configuration (ORCJAVA-328)
  - The controller build script does not mandate an explicit character
    encoding for all Java compiler tasks. This causes issues on some
    systems with incompatible default character set/locale. This patch
    enforces UTF-8 encoding on all compiled source files. (ORCJAVA-329)
  - Updates the core controller classes (excluding protocol 
    implementations, these are updated in separate tasks) to use 
    locale independent string conversions (ORCJAVA-332)
  - Restlet ClientResource was released too soon (before resource
    content was consumed), causing a NPE.